syntax = "proto3";
package proto;
option go_package = "../proto";

// 不同版本的协议可能不再出现在当前的依赖包中, 所以这里会有一些协议的定义

// push v1, register request
message BlockSeqCB {
  string name = 1;
  string URL = 2;
  string encode = 3;
  bool isHeader = 4;
  int64 lastSequence = 5;
  int64 lastHeight = 6;
  string lastBlockHash = 7;
}

// push v2, register responce
message ReplySubscribePushV2 {
  bool isOk = 1;
  string msg = 2;
}

// push v2, register request
message PushSubscribeReq {
  string name = 1;
  string URL = 2;
  string encode = 3;
  int64 lastSequence = 4;
  int64 lastHeight = 5;
  string lastBlockHash = 6;
  // 0:代表区块；1:代表区块头信息；2：代表交易回执
  int32 type = 7;
  //允许订阅多个类型的交易回执
  map<string, bool> contract = 8;
}
